# evm-rusty

./: .gitignore  Cargo.toml  README.md  ROADMAP.md
config/: config.toml
src/: blockchain.rs  lib.rs
src/block/: account.rs  block.rs  mod.rs  state.rs
src/config/: loader.rs  mod.rs  models.rs
src/crypto/: hash.rs  mod.rs  wallet.rs
src/evm/: bytecode_parser.rs  evm.rs  executor.rs  mod.rs  operation.rs
src/transaction/: errors.rs  mod.rs  transaction.rs  transaction_eip1559.rs
test/: Add.evm  Add.sol  Counter.evm  Counter.evm.asm  Counter.sol  Counter.yul
