[package]
name = "rusty-evm"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = "0.8.15"
color-eyre = "0.6.3"
dotenv = "0.15.0"
env_logger = "0.11.6"
k256 = "0.13.4"
rand_core = "0.6.4"
toml = "0.8.19"
log = "0.4.22"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
thiserror = "2.0.9"

[[bin]]
name = "node"
path = "src/bin/node.rs"

[[bin]]
name = "new_wallet"
path = "src/bin/create_wallet.rs"
